Closes #18. YES. I've finished and light tested this feature so expect small bugs to appear